# EvidenceOS

./: .gitignore  AGENTS.md  BUILD_AND_PUSH.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  MIGRATION_REMOVE_PYTHON.md  Makefile  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  TESTING_EVIDENCE.md  UNPACK_AND_SETUP.md  docker-compose.redteam.yml  docker-compose.yml  hardening_issue_drafts.md  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.github/: ISSUE_DRAFTS.md  REPO_DESCRIPTION.md  copilot-instructions.md  pull_request_template.md
analysis/: README.md  __init__.py  consort.py  etl_reader.py  survival.py  trial_dataframe.py
config/: trial_arms.json
crates/evidenceos-attest/: Cargo.toml
crates/evidenceos-attest/src/: lib.rs  main.rs
crates/evidenceos-attest/tests/fixtures/: README.md  sev_snp_known_bad.json  sev_snp_known_good.json  sev_snp_policy.json
crates/evidenceos-auth-protocol/: Cargo.toml
crates/evidenceos-auth-protocol/src/: lib.rs
crates/evidenceos-auth-protocol/tests/: golden_vectors.rs
crates/evidenceos-auth-protocol/tests/vectors/: auth_signing_vectors.json
crates/evidenceos-core/: Cargo.toml  build.rs
crates/evidenceos-core/proto/: oracle_plusplus.proto
crates/evidenceos-core/src/: aspec.rs  canary.rs  capsule.rs  crypto_transcripts.rs  dlc.rs  dp_lane.rs  eprocess.rs  error.rs  etl.rs  holdout_crypto.rs  ledger.rs  lib.rs  magnitude_envelope.rs  nullspec.rs  nullspec_contract.rs  nullspec_registry.rs  nullspec_store.rs  oracle.rs  oracle_bundle.rs  oracle_plusplus.rs  oracle_registry.rs  oracle_wasm.rs  physhir.rs  pln.rs  settlement.rs  structured_claims.rs  tee.rs  topicid.rs  wasm_config.rs
crates/evidenceos-core/src/extensions/: cost_model.rs  e_process.rs  mod.rs  nullspec.rs  registry.rs
crates/evidenceos-core/src/trial/: mod.rs  router.rs  tests.rs
crates/evidenceos-core/tests/: aspec_policy_matrix_integration.rs  aspec_thresholds_integration.rs  dp_lane_tests.rs  etl_compat.rs  etl_matrix.rs  kms_holdout_providers_integration.rs  ledger_matrix.rs  ledger_matrix_integration.rs  ledger_pools_integration.rs  nullspec_registry_tests.rs  oracle_matrix.rs  oracle_matrix_integration.rs  oracle_plugins_integration.rs  oracle_plusplus_integration.rs  paper_conformance.rs  stress_tests.rs
crates/evidenceos-daemon/: Cargo.toml  build.rs
crates/evidenceos-daemon/artifacts/: postflight-unit.etl.ndjson
crates/evidenceos-daemon/benches/: verification_latency.rs
crates/evidenceos-daemon/proptest-regressions/: policy_oracle.txt
crates/evidenceos-daemon/src/: accounting.rs  auth.rs  config.rs  executor.rs  http_preflight.rs  http_preflight_tests.rs  key_management.rs  lib.rs  main.rs  pln_profile.rs  policy_oracle.rs  probe.rs  public_error.rs  server.rs  settlement.rs  telemetry.rs  vault.rs  wasm_config.rs
crates/evidenceos-daemon/src/server/: core.rs  execution.rs  handlers_v1.rs  handlers_v2.rs  lifecycle.rs  mod.rs  sealing.rs  telemetry.rs
crates/evidenceos-daemon/src/trial/: mod.rs
crates/evidenceos-daemon/tests/: abi_conformance.rs  aspec_rejections.rs  auth_integration.rs  auth_protocol_contract_vectors.rs  calibration_provenance_enforcement.rs  credit_tests.rs  e2e_claim_lifecycle.rs  envelope_pack_enforcement_system.rs  etl_proofs_system.rs  etl_verification_system.rs  execute_claim_v2_settlement_system.rs  executor_tests.rs  golden_claims_vs_impl_system.rs  kms_key_management_integration.rs  ledger_snapshot_system.rs  lifecycle_v2.rs  multitenant_authz.rs  operator_config_signatures.rs  oracle_ttl_enforcement.rs  oracle_ttl_reload_system.rs  pb_compile.rs  policy_oracle_e2e.rs  preflight_http_integration.rs  probing_detection_system.rs  production_mode_startup_guards.rs  protocol_compat_system.rs  scenarios_system.rs  schema_aliases_system.rs  structured_claims_system.rs  transport_hardening_system.rs  vault_execution.rs
crates/evidenceos-envelope/: Cargo.toml
crates/evidenceos-envelope/src/: main.rs
crates/evidenceos-etl-indexer/: Cargo.toml
crates/evidenceos-etl-indexer/src/: main.rs
crates/evidenceos-operator/: Cargo.toml
crates/evidenceos-operator/src/: main.rs
crates/evidenceos-pln-calibrate/: Cargo.toml
crates/evidenceos-pln-calibrate/src/: main.rs
crates/evidenceos-protocol/: Cargo.toml  build.rs
crates/evidenceos-protocol/proto/: evidenceos.proto  evidenceos_v1.proto
crates/evidenceos-protocol/src/: lib.rs
crates/evidenceos-protocol/tests/: proto_snapshot.rs
crates/evidenceos-redteam/: Cargo.toml
crates/evidenceos-redteam/src/: main.rs
crates/evidenceos-settle-offline/: Cargo.toml
crates/evidenceos-settle-offline/src/: main.rs
crates/evidenceos-verifier/: CHANGELOG.md  Cargo.toml
crates/evidenceos-verifier/src/: lib.rs
crates/evidenceosctl/: Cargo.toml
crates/evidenceosctl/src/: main.rs
docs/: AGENT_ADAPTER_CONTRACT.md  ALIGNMENT_SPILLOVER_POSITIONING.md  ARCHITECTURE_DIAGRAMS.md  ARTIFACT_INDEX.md  AUTH_PROTOCOL.md  CANARY.md  COVERAGE.md  CREDIT_AND_ADMISSION.md  DEPLOYMENT_GUIDE.md  DP_LANE.md  DP_REINTRODUCTION_PLAN.md  DUAL_USE_AND_MISUSE.md  ENVELOPE_GOVERNANCE.md  EPISTEMIC_TRIAL_HARNESS.md  ETL_FAQ.md  ETL_INDEXER.md  HARDENING_ISSUE_DRAFTS.md  HOLDOUT_ENCRYPTION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_PATTERNS.md  LANGCHAIN_WRAPPER.md  LEGACY_SETUP.md  MIGRATION_REMOVE_PYTHON.md  NULLSPEC.md  NULLSPEC_GOVERNANCE.md  OFFLINE_SETTLEMENT.md  OPERATIONS.md  OPERATION_LEVEL_SECURITY.md  ORACLES.md  ORACLE_PLUGINS.md  OUTREACH_TEMPLATE.md  PAPER_VS_CODE.md  PLN.md  PLN_PRODUCTION_PROFILE.md  POSITIONING.md  PROTOCOL_VERSIONING.md  PYTHON_SCOPE.md  README.md  REALTIME_VS_RUNTIME.md  REAL_WORLD_VALIDATION.md  (+25 more)
fuzz/: .gitignore  Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: fuzz_aspec_verify.rs  fuzz_daemon_decode_limits.rs  fuzz_etl_ops.rs  fuzz_etl_read_entry.rs  fuzz_grpc_claim_capsule_kernel.rs  fuzz_ledger_ops.rs  fuzz_oracle_roundtrip.rs  fuzz_probe_detector.rs  fuzz_structured_claim_validate.rs  fuzz_structured_claims_validator.rs  fuzz_unit_parser.rs
(+277 files in other folders)
