# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
  "crates/evidenceos-core",
  "crates/evidenceos-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/<your-org>/EvidenceOS"
