# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
  "crates/evidenceos-protocol",
  "crates/evidenceos-core",
  "crates/evidenceos-guest-abi",
  "crates/evidenceos-attest",
  "crates/evidenceos-daemon",
  "crates/evidenceosctl",
  "crates/evidenceos-operator",
  "crates/evidenceos-settle-offline",
  "crates/evidenceos-pln-calibrate",
  "crates/evidenceos-envelope",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
authors = ["Joseph Verdicchio", "EvidenceOS Contributors"]
description = "EvidenceOS kernel: deterministic transparency log, claim ledger, and verification daemon."
license = "Apache-2.0"
repository = "https://github.com/jverdicc/EvidenceOS"
