[package]
name = "evidenceos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
evidenceos-core = { path = "../crates/evidenceos-core" }
evidenceos-daemon = { path = "../crates/evidenceos-daemon" }
evidenceos-protocol = { path = "../crates/evidenceos-protocol" }
prost = "0.13"
tempfile = "3"
arbitrary = { version = "1", features = ["derive"] }
rand = "0.8"
serde_json = "1"

[[bin]]
name = "fuzz_aspec_verify"
path = "fuzz_targets/fuzz_aspec_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_etl_read_entry"
path = "fuzz_targets/fuzz_etl_read_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured_claim_validate"
path = "fuzz_targets/fuzz_structured_claim_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ledger_ops"
path = "fuzz_targets/fuzz_ledger_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_oracle_roundtrip"
path = "fuzz_targets/fuzz_oracle_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_etl_ops"
path = "fuzz_targets/fuzz_etl_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_daemon_decode_limits"
path = "fuzz_targets/fuzz_daemon_decode_limits.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grpc_claim_capsule_kernel"
path = "fuzz_targets/fuzz_grpc_claim_capsule_kernel.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_probe_detector"
path = "fuzz_targets/fuzz_probe_detector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured_claims_validator"
path = "fuzz_targets/fuzz_structured_claims_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_unit_parser"
path = "fuzz_targets/fuzz_unit_parser.rs"
test = false
doc = false
bench = false
