[package]
name = "evidenceos-attest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
ring = "0.17"
rustls-pemfile = "2"
rustls-webpki = "0.102"
rustls-pki-types = "1"
evidenceos-core = { path = "../evidenceos-core" }
