# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evidenceos-protocol = { path = "../evidenceos-protocol" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
wasmparser = "0.121"
parking_lot = "0.12"
crc32fast = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
wat = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
