# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
trial-harness = []

[dependencies]
evidenceos-protocol = { path = "../evidenceos-protocol" }
evidenceos-verifier = { path = "../evidenceos-verifier", version = "0.1.0" }
evidenceos-guest-abi = { path = "../evidenceos-guest-abi" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
rand_chacha = "0.3"
ring = "0.17"
wasmparser = "0.121"
parking_lot = "0.12"
crc32fast = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
wasmtime = { version = "25", default-features = false, features = ["cranelift", "runtime"] }
tracing = "0.1"
prost = "0.13"
tonic = { version = "0.12", features = ["transport", "tls"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
wat = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
