# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
dp_lane = []
research_extensions = []
default = []
kms-aws = ["dep:aws-config", "dep:aws-sdk-kms", "dep:tokio"]
kms-gcp = ["dep:google-cloud-kms", "dep:google-cloud-googleapis", "dep:tokio"]
kms-azure = ["dep:azure_identity", "dep:azure_security_keyvault_keys", "dep:tokio"]

[dependencies]
evidenceos-protocol = { path = "../evidenceos-protocol" }
evidenceos-verifier = { path = "../evidenceos-verifier", version = "0.1.0" }
evidenceos-guest-abi = { path = "../evidenceos-guest-abi" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
rand_chacha = "0.3"
ring = "0.17"
wasmparser = "0.121"
parking_lot = "0.12"
crc32fast = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
wasmtime = { workspace = true }
tracing = "0.1"
prost = "0.13"
tonic = { version = "0.12", features = ["transport", "tls"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
google-cloud-kms = { version = "0.6", optional = true }
google-cloud-googleapis = { version = "0.15", optional = true }
azure_identity = { version = "0.21", optional = true }
azure_security_keyvault_keys = { version = "0.21", optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
wat = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
