# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evidenceos-core = { path = "../evidenceos-core" }
evidenceos-protocol = { path = "../evidenceos-protocol" }

anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tonic = { version = "0.12", features = ["transport"] }

parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
