# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evidenceos-core = { path = "../evidenceos-core" }
evidenceos-protocol = { path = "../evidenceos-protocol" }
evidenceos-guest-abi = { path = "../evidenceos-guest-abi" }

anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tonic = { version = "0.12", features = ["transport", "tls"] }

parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
getrandom = "0.2"
wasmtime = { version = "25", default-features = false, features = ["cranelift", "runtime"] }
prost = "0.13"
base64 = "0.22"
axum = "0.7"
tower-http = { version = "0.6", features = ["trace", "limit"] }
http = "1"


[dev-dependencies]
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.13"
base64 = "0.22"
wat = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
rcgen = "0.13"
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bench]]
name = "verification_latency"
harness = false

[features]
crash-test-failpoints = []
