# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evidenceos-core = { path = "../evidenceos-core" }
evidenceos-protocol = { path = "../evidenceos-protocol" }
evidenceos-guest-abi = { path = "../evidenceos-guest-abi" }
evidenceos-attest = { path = "../evidenceos-attest" }
evidenceos-auth-protocol = { path = "../evidenceos-auth-protocol" }

anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tonic = { version = "0.12", features = ["transport", "tls"] }

parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
getrandom = "0.2"
wasmtime = { workspace = true }
prost = "0.13"
base64 = "0.22"
axum = "0.7"
tower-http = { version = "0.6", features = ["trace", "limit"] }
http = "1"
aws-config = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
google-cloud-kms = { version = "0.6", optional = true }
google-cloud-googleapis = { version = "0.15", optional = true }
azure_identity = { version = "0.21", optional = true }
azure_security_keyvault_keys = { version = "0.21", optional = true }


[dev-dependencies]
evidenceos-verifier = { path = "../evidenceos-verifier", version = "0.1.0" }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.13"
base64 = "0.22"
wat = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
rcgen = "0.13"
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bench]]
name = "verification_latency"
harness = false

[features]
dp_lane = ["evidenceos-core/dp_lane"]
crash-test-failpoints = []
kms-aws = ["dep:aws-config", "dep:aws-sdk-kms"]
kms-gcp = ["dep:google-cloud-kms", "dep:google-cloud-googleapis"]
kms-azure = ["dep:azure_identity", "dep:azure_security_keyvault_keys"]
