[package]
name = "evidenceos-envelope"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
evidenceos-core = { path = "../evidenceos-core" }
hex = "0.4"
serde_json = "1"
