[package]
name = "evidenceos-operator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
evidenceos-core = { path = "../evidenceos-core" }
evidenceos-protocol = { path = "../evidenceos-protocol" }
