[package]
name = "evidenceos-pln-calibrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
evidenceos-core = { path = "../evidenceos-core" }
wasmtime = "27"
wat = "1"
