# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"
