[package]
name = "evidenceos-redteam"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
evidenceos-protocol = { path = "../evidenceos-protocol" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.12", features = ["transport"] }
