# Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "evidenceos-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared EvidenceOS verification primitives for transcripts, ETL proofs, and capsule hashes"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
evidenceos-protocol = { path = "../evidenceos-protocol", version = "0.1.0-alpha" }
